syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

import "person.proto";

option go_package = "github.com/itsscb/df/pb";

message ListPersonsRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "ListPersons";
          description: "Returns a List of Persons";
          required: [
            "account_id"
            ];
        };
        example: "{\"account_id\": 1 }";
    };
    int64 account_id = 1;
}

message ListPersonsResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "ListPersons Response";
          description: "Returns the Person";
        };
    };
    repeated Person persons = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}